==> michalsusen/homeprojects/boiler_temperature/lcd_receiver_transmitter/lib/VirtualWire/VirtualWire.c <==
#include "VirtualWire.h"

void vw_setup(uint16_t speed)
{
	GPIO_InitTypeDef        GPIO_InitStructureInput;
	GPIO_InitTypeDef        GPIO_InitStructureOutput;
	
 /*
  	// Calculate the OCR1A overflow count based on the required bit speed
    // and CPU clock rate
    uint16_t ocr1a = (F_CPU / 8UL) / speed;

#ifndef TEST
    // Set up timer1 for a tick every 62.50 microseconds 
    // for 2000 bits per sec
    TCCR1A = 0;
    TCCR1B = _BV(WGM12) | _BV(CS10);
    // Caution: special procedures for setting 16 bit regs
    OCR1A = ocr1a;
    // Enable interrupt
#ifdef TIMSK1
    // atmega168
    TIMSK1 |= _BV(OCIE1A);
#else
    // others
    TIMSK |= _BV(OCIE1A);
#endif

#endif
*/


	 /* TIM Configuration */
  TIM_Config();
  
  /* -----------------------------------------------------------------------
    TIM3 Configuration: Output Compare Timing Mode:
    
    In this example TIM3 input clock (TIM3CLK) is set to APB1 clock (PCLK1),  
      => TIM3CLK = PCLK1 = SystemCoreClock = 48 MHz
          
    To get TIM3 counter clock at 6 MHz, the prescaler is computed as follows:
       Prescaler = (TIM3CLK / TIM3 counter clock) - 1
       Prescaler = (PCLK1 /6 MHz) - 1
                                                  
    CC3 update rate = TIM3 counter clock / CCR3_Val = 439.4 Hz
    ==> Toggling frequency = 219.7 Hz
    
    CC4 update rate = TIM3 counter clock / CCR4_Val = 878.9 Hz
    ==> Toggling frequency = 439.4 Hz

    Note: 
     SystemCoreClock variable holds HCLK frequency and is defined in system_stm32f2xx.c file.
     Each time the core clock (HCLK) changes, user had to call SystemCoreClockUpdate()
     function to update SystemCoreClock variable value. Otherwise, any configuration
     based on this variable will be incorrect.    
  ----------------------------------------------------------------------- */   

  /* Compute the prescaler value */
  PrescalerValue = (uint16_t) (SystemCoreClock  / 6000000) - 1;

  /* Time base configuration */
  TIM_TimeBaseStructure.TIM_Period = 65535;
  TIM_TimeBaseStructure.TIM_Prescaler = 0;
  TIM_TimeBaseStructure.TIM_ClockDivision = 0;
  TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;

  TIM_TimeBaseInit(TIM3, &TIM_TimeBaseStructure);

  /* Prescaler configuration */
  TIM_PrescalerConfig(TIM3, PrescalerValue, TIM_PSCReloadMode_Immediate);

  /* Output Compare Timing Mode configuration: Channel1 */
  TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
  TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;

  /* Output Compare Timing Mode configuration: Channel3 */
  TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
  TIM_OCInitStructure.TIM_Pulse = CCR3_Val;

  TIM_OC3Init(TIM3, &TIM_OCInitStructure);

  TIM_OC3PreloadConfig(TIM3, TIM_OCPreload_Disable);

  /* TIM Interrupts enable */
  TIM_ITConfig(TIM3, TIM_IT_CC3, ENABLE);

  /* TIM3 enable counter */
  TIM_Cmd(TIM3, ENABLE);


   // Set up digital IO pins
	 
	 /* GPIOC Periph clock enable */
  RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOC, ENABLE);

  GPIO_InitStructureInput.GPIO_Pin = vw_rx_pin;
  GPIO_InitStructureInput.GPIO_Mode = GPIO_Mode_IN;
  GPIO_InitStructureInput.GPIO_OType = GPIO_OType_OD;
  GPIO_InitStructureInput.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructureInput.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(GPIOC, &GPIO_InitStructureInput);
	
	GPIO_InitStructureOutput.GPIO_Pin = vw_tx_pin | vw_ptt_pin;
  GPIO_InitStructureOutput.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructureOutput.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructureOutput.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructureOutput.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_Init(GPIOC, &GPIO_InitStructureOutput);


	GPIO_WriteBit(GPIOC,vw_ptt_pin,(BitAction)vw_ptt_inverted);
	 
  //  pinMode(vw_tx_pin, OUTPUT);
  //  pinMode(vw_rx_pin, INPUT);
  //  pinMode(vw_ptt_pin, OUTPUT);
   // digitalWrite(vw_ptt_pin, vw_ptt_inverted);
}

void vw_tx_start()
{
    vw_tx_index = 0;
    vw_tx_bit = 0;
    vw_tx_sample = 0;

    // Disable the receiver PLL
    vw_rx_enabled = false;

    // Enable the transmitter hardware
//    digitalWrite(vw_ptt_pin, true ^ vw_ptt_inverted);
	GPIO_WriteBit(GPIOC,vw_ptt_pin,(BitAction)(true ^ vw_ptt_inverted));

    // Next tick interrupt will send the first bit
    vw_tx_enabled = true;
}

void vw_tx_stop()
{
    // Disable the transmitter hardware
//    digitalWrite(vw_ptt_pin, false ^ vw_ptt_inverted);
//    digitalWrite(vw_tx_pin, false);
		GPIO_WriteBit(GPIOC,vw_ptt_pin,(BitAction)(false ^ vw_ptt_inverted));
		GPIO_WriteBit(GPIOC,vw_tx_pin,(BitAction)(false));
    // No more ticks for the transmitter
    vw_tx_enabled = false;

    // Enable the receiver PLL
    vw_rx_enabled = true;
}
